--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
          href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css"
       />
 
-      <!-- Bootstrap minified CSS fILE -->
+      <!-- Bootstrap minified CSS file -->
       <link rel="stylesheet" href="./Bootstrap css/bootstrap.min.css" />
 
       <link rel="stylesheet" href="./css/main.css" />
@@ -39,6 +39,7 @@
          href="./images/favicon.ico"
       />
    </head>
+
    <body>
       <!-- Navbar -->
       <nav class="navbar navbar-1 navbar-expand-md">
